Fix the value of text-overflow declartion

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -148,7 +148,7 @@ li {
     padding-left: var(--spacing);
     overflow: hidden;
     white-space: nowrap;
-    text-overflow: "...";
+    text-overflow: ellipsis;
 }
 
 a,
